frontend/src/App.css
@import '~antd/dist/antd.dark.css';

/* :root {
  --svg-scale: 1;
} */

body {
  margin: 0;
  /* height: 100vh; */
  width: 100vw;
}

canvas {
  display: block;
  /* height: 100vh; */
  width: 100vw;
}

#render-container {
  --svg-scale: 1;
  --blend-mode: color;
  /* multiply and difference are also pretty good .. best => color*/
  position: relative;
  height: 100%;
  width: 100%;
}

#svg-container > div {
  mix-blend-mode: var(--blend-mode);
}

#svg-container > #front,
#svg-container > #back {
  mix-blend-mode: normal;
}

#svg-container > #front > object,
#svg-container > #front > svg {
  transform: scale(var(--svg-scale), var(--svg-scale));
}

#svg-container > div > svg {
  transform: scale(var(--svg-scale), var(--svg-scale));
}

#svg-container > #back > object,
#svg-container > #back > svg {
  transform-origin: unset !important;
  transform: scale(calc(var(--svg-scale) * -1), var(--svg-scale));
}

.elements {
  padding: 10px;
  position: absolute;
  z-index: 1000;
  height: 100vh;
  width: 100vw;
  pointer-events: none;
}

.sidebarcontainer {
  height: 100%;
  width: 200px;
}

.sidebar {
  opacity: 97%;
  height: 100%;
  width: 200px;
  transition: 0.5s ease;
  pointer-events: all;
}

.sidebar-hidden {
  opacity: 0%;
  height: 100%;
  width: 200px;
  transition: 0.5s ease;
  pointer-events: none;
}

#root {
  position: absolute;
}

.stats {
  position: absolute;
  right: 0;
  left: auto !important;
  padding: 10px;
}

.icon-attribute {
  right: 0;
  position: absolute;
  bottom: 0px;
  padding: 7px;
  z-index: 1000;
}

.togglesidebar {
  bottom: 15px;
  opacity: 100%;
  position: absolute;
  z-index: 1001;
  pointer-events: all;
}

.sidebarlist {
  height: 100%;
  position: relative;
  /*  overflow: visible;
  pointer-events: all; */
}

/* .sidebarlist::-webkit-scrollbar {
  display: none;
} */

@keyframes movesidebar {
  from {
    left: -30%;
  }
  to {
    left: 100%;
  }
}

/* Custom Ant Design modfyers */

.ant-btn-link {
  color: rgba(255, 255, 255, 0.85);
}

.ant-card-head {
  padding: 0 16px;
  font-size: 16px;
}

.ant-card-body {
  height: calc(100% - 100px);
  padding: 0px;
}

.ant-tabs {
  height: 100%;
}

.ant-tabs-nav {
  margin: 0 0 0 0 !important;
}

.ant-tabs-tab {
  align-content: center;
  margin: 0 10px 0 0px;
}

.ant-tabs-content-holder {
  padding: 10px;
  height: 100%;
}

.ant-tabs-content {
  height: 100%;
  /* overflow: auto; */
}

.ant-tabs-tabpane {
  height: 100%;
  overflow: scroll;
}

.ant-tabs-tabpane::-webkit-scrollbar {
  display: none;
}

/* CSS below is for CSS controlled 3d spin of an SVG*/

/* #back-pcb {
  transform: scale(-1, 1);
} */

.flip-card {
  background-color: transparent;
  margin-left: auto;
  margin-right: auto;
  width: 300px;
  height: 200px;
  perspective: 500px; /* Remove this if you don't want the 3D effect */
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
  animation-name: spinner;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-duration: 6s;
}

/* Do an horizontal flip when you move the mouse over the flip box container */

/* Position the front and back side */
.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
.flip-card-front {
  color: white;
}

/* Style the back side */
.flip-card-back {
  transform: rotateY(180deg);
}

@keyframes spinner {
  from {
    transform: rotateY(0deg);
  }
  to {
    transform: rotateY(360deg);
  }
}

